--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <select id="countryFilter"></select>
     </div>
     <div class="row">
-      <input id="sheetUrl" type="url" placeholder="Paste Google Sheet CSV URL (optional)">
+      <input id="sheetUrl" type="url" placeholder="Paste Google Sheet CSV URL (must end with output=csv)">
       <button id="loadSheet">Load</button>
     </div>
     <div class="row">
